# lol-etl

./: .gitignore  pyproject.toml  sonar-project.properties
src/: constants.py  extract.py  lol_backend_service.py  parser.py  utils.py
